<resources>
    <string name="app_name">Toilet_bowl</string>
    <string name="menu" />
    <string name="profileimage" />
    <string name="start">시작하기</string>
    <string name="마이페이지">마이페이지</string>
    <string name="알림">알림</string>
    <string name="게시판">게시판</string>
    <string name="home">Home</string>
    <string name="상담게시판">상담게시판</string>
    <string name="로그아웃">로그아웃</string>
    <string name="nickname">NickName</string>

    <string name="facebook_app_id">285805969126598</string>
    <string name="fb_login_protocol_scheme">fb285805969126598</string>
    <string name="로그인">로그인</string>
    <string name="신규회원가입">신규 회원가입</string>
    <string name="비밀번호찾기">비밀번호가 기억나지 않습니까?</string>


</resources>
